test/lambda/negative/semantic/arity_mismatch.ls
// @expect-error: E204
// @description: Wrong number of arguments to function

let add = (a, b) => a + b
let x = add(1)
